--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rapid-logger",
   "version": "0.0.1",
-  "description": "A customizable, speedy logger for Node projects with deferred evaluation",
+  "description": "A customizable, speedy, and fully-typed logger for Node projects with deferred evaluation",
   "main": "index.js",
   "keywords": [
     "logger",
@@ -9,7 +9,8 @@
     "log",
     "performant",
     "fast",
-    "deferred"
+    "deferred evaluation",
+    "deferred logging"
   ],
   "homepage": "https://github.com/nolawnchairs/rapid-logger",
   "repository": {
@@ -21,6 +22,7 @@
   },
   "author": "Michael Wieczorek",
   "license": "MIT",
+  "types": "index.d.ts",
   "jest": {
     "moduleFileExtensions": [
       "js",
@@ -46,10 +48,12 @@
     "dts-bundle-generator": "^7.2.0",
     "eslint": "^8.35.0",
     "jest": "^29.5.0",
+    "rimraf": "^4.4.0",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
   },
   "scripts": {
+    "build": "rimraf lib && tsc && npm run define",
     "define": "dts-bundle-generator --config ./dts.config.json",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
