--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "rapid-logger",
   "version": "0.0.1",
   "description": "A customizable, speedy, and fully-typed logger for Node projects with deferred evaluation",
-  "main": "index.js",
   "keywords": [
     "logger",
     "logging",
@@ -23,6 +22,14 @@
   "author": "Michael Wieczorek",
   "license": "MIT",
   "types": "index.d.ts",
+  "main": "lib/cjs/index.js",
+  "module": "lib/esm/index.js",
+  "exports": {
+    ".": {
+        "import": "./lib/esm/index.js",
+        "require": "./lib/cjs/index.js"
+    }
+  },
   "jest": {
     "moduleFileExtensions": [
       "js",
@@ -54,7 +61,8 @@
   },
   "scripts": {
     "dev": "tsc -w",
-    "build": "rimraf lib && tsc && npm run define",
+    "build": "rimraf lib && npm run compile && npm run define",
+    "compile": "tsc -p tsconfig.esm.json && tsc -p tsconfig.cjs.json && node fixup.js",
     "define": "dts-bundle-generator --config ./dts.config.json",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
