remove dual compile

--- a/dts.config.json
+++ b/dts.config.json
@@ -9,7 +9,8 @@
       "output": {
         "inlineDeclareGlobals": false,
         "sortNodes": true,
-        "umdModuleName": "RapidLogger"
+        "umdModuleName": "RapidLogger",
+        "noBanner": true
       }
     }
   ]
